samples/_failures_safe/1761621748_0f652d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7cd5e3cb.c: In function ‘main’:
./samples/SAFE/__tmp_7cd5e3cb.c:161:15: error: expected ‘;’ at end of input
  161 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_7cd5e3cb.c:161:9: error: expected declaration or statement at end of input
  161 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_7cd5e3cb.c:161:9: error: expected declaration or statement at end of input
